# octo-robot

./: LICENSE  README.md  high_scores.json  pyproject.toml  requirements.txt
src/: main.py
src/game/: background_manager.py  config.py  game_mode.py  game_state.py  high_score_manager.py  item_manager.py  obstacle_manager.py  octo_robot_game.py  player.py
src/rendering/: renderer.py
